fix weird spacing on doc page

--- a/src/views/DocumentationPage.module.css
+++ b/src/views/DocumentationPage.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: var(--spacing-xl);
+  justify-content: space-evenly;
 }
 
 .component-list > section {
